--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -23,12 +23,12 @@
 
     <include layout="@layout/content_detail_post" />
 
-    <android.support.design.widget.FloatingActionButton
+    <!--android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_action_send_white" />
+        android:src="@drawable/ic_action_send_white" /-->
 
 </android.support.design.widget.CoordinatorLayout>
